--- a/src/main/resources/templates/editrestaurant.html
+++ b/src/main/resources/templates/editrestaurant.html
@@ -1,70 +1,81 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+<title></title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 </head>
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" th:href="@{/reviews}">Buffet Reviews</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-	    <div class="navbar-nav">
-	      <a class="nav-item nav-link active" th:href="@{/reviews}">Reviews<span class="sr-only">(current)</span></a>
-	      <a class="nav-item nav-link" th:href="@{/restaurants}">Restaurants</a>
-	    </div>
-	  </div>
-	  <span class="navbar-text" th:inline="text">Logged in as [[${#httpServletRequest.remoteUser}]]!</span>
-	  <form th:action="@{/logout}" method="post">
-		<input type="submit" class="btn btn-sm btn-outline-secondary" value="Sign Out"/>
-	  </form>
+		<a class="navbar-brand" th:href="@{/reviews}">Buffet Reviews</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse"
+			data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+			aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			<div class="navbar-nav">
+				<a class="nav-item nav-link active" th:href="@{/reviews}">Reviews<span
+					class="sr-only">(current)</span></a> <a class="nav-item nav-link"
+					th:href="@{/restaurants}">Restaurants</a>
+			</div>
+		</div>
+		<span class="navbar-text" th:inline="text">Logged in as
+			[[${#httpServletRequest.remoteUser}]]!</span>
+		<form th:action="@{/logout}" method="post">
+			<input type="submit" class="btn btn-sm btn-outline-secondary"
+				value="Sign Out" />
+		</form>
 	</nav>
-	
+
 	<h1>Add a restaurant</h1>
-	<form th:object="${restaurant}" th:action="@{../saveRestaurant}" action="#" method="post">
-		<input type="hidden" th:field="*{restaurantId}" class="form-control"/>
+	<form th:object="${restaurant}" th:action="@{../saveRestaurant}"
+		action="#" method="post">
+		<input type="hidden" th:field="*{restaurantId}" class="form-control" />
 		<div>
-			<label>Restaurant Name:</label>
-			<input type="text" placeholder="Add the restaurants name" name="restaurantName" th:field="*{restaurantName}" /> 
+			<label>Restaurant Name:</label> <input type="text"
+				placeholder="Add the restaurants name" name="restaurantName"
+				th:field="*{restaurantName}" />
 		</div>
 		<div>
-			<label>Type:</label>
-			<input type="text" placeholder="Add a cuisine type (separate with a comma)..." name="Type" th:field="*{type}" /> 
+			<label>Type:</label> <input type="text"
+				placeholder="Add a cuisine type (separate with a comma)..."
+				name="Type" th:field="*{type}" />
 		</div>
 		<div>
 			<label>Information about the Restaurant</label>
-			<textarea class="form-control" placeholder="Add some info..." name="info" rows="3" th:field="*{info}"></textarea> 
+			<textarea class="form-control" placeholder="Add some info..."
+				name="info" rows="3" th:field="*{info}"></textarea>
 		</div>
 		<div>
-			<label>Address:</label>
-			<input type="text" placeholder="Add address..." name="address" th:field="*{address}" /> 
+			<label>Address:</label> <input type="text"
+				placeholder="Add address..." name="address" th:field="*{address}" />
 		</div>
 		<div>
-			<label>City:</label>
-			<input type="text" placeholder="Add city..." name="city" th:field="*{city}" /> 
+			<label>City:</label> <input type="text" placeholder="Add city..."
+				name="city" th:field="*{city}" />
 		</div>
 		<div>
-			<label>Post-Code:</label>
-			<input type="text" placeholder="Add post-code" name="postcode" th:field="*{postcode}" /> 
+			<label>Post-Code:</label> <input type="text"
+				placeholder="Add post-code" name="postcode" th:field="*{postcode}" />
 		</div>
 		<div>
-			<label>State:</label>
-			<input type="text" placeholder="Add state..." name="state" th:field="*{state}" /> 
+			<label>State:</label> <input type="text" placeholder="Add state..."
+				name="state" th:field="*{state}" />
 		</div>
 		<div>
-			<label>Country:</label>
-			<input type="text" placeholder="Add country..." name="country" th:field="*{country}" /> 
+			<label>Country:</label> <input type="text"
+				placeholder="Add country..." name="country" th:field="*{country}" />
 		</div>
-		
-  		<div class="form-group">
-    		<label for="filePicture">Add a picture</label>
-    		<input type="file" class="form-control-file" id="exampleFormControlFile1" />
-  		</div>
-  		<input type="submit" class="btn btn-success" value="Submit Restaurant"></input>
+
+		<div class="form-group">
+			<label for="filePicture">Add a picture</label> <input type="file"
+				class="form-control-file" id="exampleFormControlFile1" />
+		</div>
+		<input type="submit" class="btn btn-success" value="Submit Restaurant"></input>
 	</form>
 </body>
 </html>
