--- a/src/main/resources/templates/editreview.html
+++ b/src/main/resources/templates/editreview.html
@@ -1,114 +1,153 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-	<!-- Font Awesome by Dave Gandy - http://fontawesome.io -->
-	<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css"> 
-	<style>
-		/* Pure CSS Star Rating Widget by James Barnett - http://jamesbarnett.me */
-		fieldset, label { margin: 0; padding: 0; }
-		body{ margin: 20px; }
-		h1 { font-size: 1.5em; margin: 10px; }
-		.rating{
-		  border: none;
-		  float: left;
-		}
-		
-		.rating > input { display: none; } 
-		.rating > label:before { 
-		  margin: 5px;
-		  font-size: 1.25em;
-		  font-family: FontAwesome;
-		  display: inline-block;
-		  content: "\f005";
-		}
-		
-		.rating > .half:before { 
-		  content: "\f089";
-		  position: absolute;
-		}
-		
-		.rating > label { 
-		  color: #ddd; 
-		 float: right; 
-		}
-		
-		.rating > input:checked ~ label, /* show gold star when clicked */
-		.rating:not(:checked) > label:hover, /* hover current star */
-		.rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
-		
-		.rating > input:checked + label:hover, /* hover current star when changing rating */
-		.rating > input:checked ~ label:hover,
-		.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
-		.rating > input:checked ~ label:hover ~ label { color: #FFED85;  }
-	</style>
+<title></title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+<!-- Font Awesome by Dave Gandy - http://fontawesome.io -->
+<link rel="stylesheet"
+	href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
+<style>
+/* Pure CSS Star Rating Widget by James Barnett - http://jamesbarnett.me */
+fieldset, label {
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	margin: 20px;
+}
+
+h1 {
+	font-size: 1.5em;
+	margin: 10px;
+}
+
+.rating {
+	border: none;
+	float: left;
+}
+
+.rating>input {
+	display: none;
+}
+
+.rating>label:before {
+	margin: 5px;
+	font-size: 1.25em;
+	font-family: FontAwesome;
+	display: inline-block;
+	content: "\f005";
+}
+
+.rating>.half:before {
+	content: "\f089";
+	position: absolute;
+}
+
+.rating>label {
+	color: #ddd;
+	float: right;
+}
+
+.rating>input:checked ~ label, /* show gold star when clicked */ .rating:not
+	(:checked ) >label:hover, /* hover current star */ .rating:not (:checked
+	) >label:hover ~ label {
+	color: #FFD700;
+} /* hover previous stars in list */
+.rating>input:checked+label:hover,
+	/* hover current star when changing rating */ .rating>input:checked ~
+	label:hover, .rating>label:hover ~ input:checked ~ label,
+	/* lighten current selection */ .rating>input:checked ~ label:hover ~
+	label {
+	color: #FFED85;
+}
+</style>
 </head>
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" th:href="@{/reviews}">Buffet Reviews</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-	    <div class="navbar-nav">
-	      <a class="nav-item nav-link active" th:href="@{/reviews}">Reviews<span class="sr-only">(current)</span></a>
-	      <a class="nav-item nav-link" th:href="@{/restaurants}">Restaurants</a>
-	    </div>
-	  </div>
-	  <span class="navbar-text" th:inline="text">Logged in as [[${#httpServletRequest.remoteUser}]]!</span>
-	  <form th:action="@{/logout}" method="post">
-		<input type="submit" class="btn btn-sm btn-outline-secondary" value="Sign Out"/>
-	  </form>
+		<a class="navbar-brand" th:href="@{/reviews}">Buffet Reviews</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse"
+			data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+			aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			<div class="navbar-nav">
+				<a class="nav-item nav-link active" th:href="@{/reviews}">Reviews<span
+					class="sr-only">(current)</span></a> <a class="nav-item nav-link"
+					th:href="@{/restaurants}">Restaurants</a>
+			</div>
+		</div>
+		<span class="navbar-text" th:inline="text">Logged in as
+			[[${#httpServletRequest.remoteUser}]]!</span>
+		<form th:action="@{/logout}" method="post">
+			<input type="submit" class="btn btn-sm btn-outline-secondary"
+				value="Sign Out" />
+		</form>
 	</nav>
-	
+
 	<h1>Edit review</h1>
-	<form th:object="${review}" th:action="@{../save}" action="#" method="post">
-		<input type="hidden" th:field="*{id}" class="form-control"/>
+	<form th:object="${review}" th:action="@{../save}" action="#"
+		method="post">
+		<input type="hidden" th:field="*{id}" class="form-control" />
 		<div>
-			<label>Author:</label>
-			<input type="text" name="user" th:field="*{username}" />
+			<label>Author:</label> <input type="text" name="user"
+				th:field="*{username}" />
 		</div>
 		<div>
 			<label>Click a star to rate</label>
 			<fieldset class="rating">
-			    <input type="radio" id="star5" name="rating" value="5" th:field="*{rating}" /><label class = "full" for="star5"></label>
-			    <input type="radio" id="star4" name="rating" value="4" th:field="*{rating}" /><label class = "full" for="star4"></label>
-			    <input type="radio" id="star3" name="rating" value="3" th:field="*{rating}" /><label class = "full" for="star3"></label>
-			    <input type="radio" id="star2" name="rating" value="2" th:field="*{rating}" /><label class = "full" for="star2"></label>
-			    <input type="radio" id="star1" name="rating" value="1" th:field="*{rating}" /><label class = "full" for="star1"></label>
+				<input type="radio" id="star5" name="rating" value="5"
+					th:field="*{rating}" /><label class="full" for="star5"></label> <input
+					type="radio" id="star4" name="rating" value="4"
+					th:field="*{rating}" /><label class="full" for="star4"></label> <input
+					type="radio" id="star3" name="rating" value="3"
+					th:field="*{rating}" /><label class="full" for="star3"></label> <input
+					type="radio" id="star2" name="rating" value="2"
+					th:field="*{rating}" /><label class="full" for="star2"></label> <input
+					type="radio" id="star1" name="rating" value="1"
+					th:field="*{rating}" /><label class="full" for="star1"></label>
 			</fieldset>
 		</div>
 		<div>
 			<label>Click a price to rate</label>
 			<fieldset class="rating">
-				<input type="radio" id="price1" name="rating" value="1" th:field="*{price}" /><label class = "full" for="price1"></label>
-			    <input type="radio" id="price2" name="rating" value="2" th:field="*{price}" /><label class = "full" for="price2"></label>
-			    <input type="radio" id="price3" name="rating" value="3" th:field="*{price}" /><label class = "full" for="price3"></label>
-			    <input type="radio" id="price4" name="rating" value="4" th:field="*{price}" /><label class = "full" for="price4"></label>
+				<input type="radio" id="price1" name="rating" value="1"
+					th:field="*{price}" /><label class="full" for="price1"></label> <input
+					type="radio" id="price2" name="rating" value="2"
+					th:field="*{price}" /><label class="full" for="price2"></label> <input
+					type="radio" id="price3" name="rating" value="3"
+					th:field="*{price}" /><label class="full" for="price3"></label> <input
+					type="radio" id="price4" name="rating" value="4"
+					th:field="*{price}" /><label class="full" for="price4"></label>
 			</fieldset>
 		</div>
 		<div>
-			<label>Restaurant:</label>
-			<select id="restlist" th:field="*{restaurant}" class="custom-select" style="width:115px">
-				<option th:each="restaurant: ${restaurants}" th:value="${restaurant.restaurantId}" th:text="${restaurant.restaurantName}"></option>
-			</select> 
+			<label>Restaurant:</label> <select id="restlist"
+				th:field="*{restaurant}" class="custom-select" style="width: 115px">
+				<option th:each="restaurant: ${restaurants}"
+					th:value="${restaurant.restaurantId}"
+					th:text="${restaurant.restaurantName}"></option>
+			</select>
 		</div>
 		<div>
-			<label>Title:</label>
-			<input type="text" name="title" th:field="*{title}" />
+			<label>Title:</label> <input type="text" name="title"
+				th:field="*{title}" />
 		</div>
 		<div>
-			<label>Date of Creation:</label>
-			<input type="date" name="date" th:field="*{reviewDate}"/>
+			<label>Date of Creation:</label> <input type="date" name="date"
+				th:field="*{reviewDate}" />
 		</div>
 		<div class="form-group">
-    		<label for="reviewText">Review</label>
-    		<textarea class="form-control" id="reviewText" rows="3" th:field="*{reviewText}" ></textarea>
-  		</div>
-  		<input type="submit" class="btn btn-success" value="Submit Review"></input>
+			<label for="reviewText">Review</label>
+			<textarea class="form-control" id="reviewText" rows="3"
+				th:field="*{reviewText}"></textarea>
+		</div>
+		<input type="submit" class="btn btn-success" value="Submit Review"></input>
 	</form>
 </body>
 </html>
