--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
 <head>
-	<title>Login</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+<title>Login</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 </head>
 
 <body class="text-center">
 	<h1>Login</h1>
 	<div>
-		<div th:if="${param.error}">
-			Invalid username or password.
-		</div>
-			<form th:action="@{/login}" method="post">
-				<div><label> User Name : <input type="text" name="username"/> </label></div>
-				<div><label> Password: <input type="password" name="password"/> </label></div>
-				<div><input type="submit" value="Sign In"/></div>
-			</form>
-			<a th:href="@{/signup}">Sign up</a>
+		<div th:if="${param.error}">Invalid username or password.</div>
+		<form th:action="@{/login}" method="post">
+			<div>
+				<label> User Name : <input type="text" name="username" />
+				</label>
+			</div>
+			<div>
+				<label> Password: <input type="password" name="password" />
+				</label>
+			</div>
+			<div>
+				<input type="submit" value="Sign In" />
+			</div>
+		</form>
+		<a th:href="@{/signup}">Sign up</a>
 	</div>
 </body>
 </html>
